--- a/index.html
+++ b/index.html
@@ -223,7 +223,7 @@
                 <div class="col-lg-6 col-md-12 mb-lg-0 mb-4">
                     <!--Featured image-->
                     <div class=" overlay rounded z-depth-1" >
-                        <img src="images/icacii.png" class="img-fluid hoverable img-thumbnail" alt="icacii project image" >
+                        <img src="images/icacii.PNG" class="img-fluid hoverable img-thumbnail" alt="icacii project image" >
                         <a>
                             <div class="mask rgba-white-slight"></div>
                         </a>
