--- a/index.html
+++ b/index.html
@@ -94,7 +94,7 @@
                     <hr class="hr-light my-4 w-75">
                     <h5 class="subtext-header mt-2 mb-4 "><b><i class="fas fa-envelope"></i>  Email :</b>  <a href="mailto:sainathomdas@gmail.com" class="white-text subtext-header"> sainathomdas@gmail.com</a></h5>
                     <h5 class="subtext-header mt-2 mb-4 "><b><i class="fas fa-phone-volume"></i> Contact :</b> <span class="contact">+91 84650 52042</span></h5>
-                    <a href="./resume.doc" class="btn btn-rounded btn-outline-white" title="Download resume" download="Sainath_Omdas_Resume">
+                    <a href="SainathOmdas_Resume.pdf" class="btn btn-rounded btn-outline-white" title="Download resume" download="SainathOmdas_Resume">
                         <i class="fas fa-file-download"></i>&nbsp;&nbsp;RESUME
                     </a>
                 </div>
