--- a/index.html
+++ b/index.html
@@ -93,7 +93,7 @@
             <hr class="hr-light my-4 w-75">
             <h5 class="subtext-header mt-2 mb-4 "><b><i class="fas fa-envelope"></i>  Email :</b>  <a href="mailto:sainathomdas@gmail.com" class="white-text subtext-header"> sainathomdas@gmail.com</a></h5>
             <h5 class="subtext-header mt-2 mb-4 "><b><i class="fas fa-phone-volume"></i> Contact :</b> <span class="contact">+91 84650 52042</span></h5>
-            <a href="SainathOmdas_Resume.pdf" class="btn btn-rounded btn-outline-white" title="Download resume" download="SainathOmdas_Resume">
+            <a href="SainathOmdasResume.pdf" class="btn btn-rounded btn-outline-white" title="Download resume" target="_blank">
               <i class="fas fa-file-download"></i>&nbsp;&nbsp;RESUME
             </a>
           </div>
