--- a/index.html
+++ b/index.html
@@ -87,7 +87,7 @@
         <div class="row animated fadeIn text-center justify-content-around ">
           <!--Grid column-->
           <div class="avatar col-md-4 col-5 white-text text-center  animated fadeInLeftBig mt-4 " data-aos="fade-right" >
-            <img src="images/profile_pic.jpg" alt="Profile Pic" class="img-fluid rounded-circle" id="profileimage">
+            <img src="images/sainath.jpeg" alt="Profile Pic" class="img-fluid rounded-circle" id="profileimage">
           </div>
           <div class="col-md-6 col mx-auto  white-text text-center animated fadeInRightBig " data-aos="fade-left">
             <h3 class="display-4 font-weight-bold white-text mb-0 pt-md-5 pt-5">Sainath Omdas</h3>
