--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@
 
   <div class="flex-center container-fluid">
     <div class="text-white" style="position: absolute; bottom: 0;">
-      <a href="">
+      <a href="#academics">
         <div class="scroll-downs pb-5">
           <div class="mousey">
             <div class="scroller"></div>
