Updated Current Position

--- a/index.html
+++ b/index.html
@@ -70,12 +70,15 @@
       <div class="container justify-content-center">
         <h1 class="crimson">&nbsp;I'm </h1>
         <h1 class="name">SAINATH</h1>
-        <h5 class="ml-lg-2 skills">Web Developer <span class="crimson">|</span> Android Developer</h5>
-        <div class="pt-lg-2 text-white">
+        <h5 class="ml-lg-2 skills"><!-- Web Developer <span class="crimson">|</span> Android Developer -->
+          System Engineer @ <span class="crimson">Tata Consultancy Services</span>
+        </h5>
+
+         <!-- <div class="pt-lg-2 mx-auto text-white justify-content-center">
           <a href="#contact" type="button" class="btn btn-header text-center ml-lg-2 mr-lg-2"> Hire Me</a>
-          <a href="SainathOmdas_Resume.pdf" type="button" class=" btn btn-header text-center" title="Download Resume"
+         <a href="SainathOmdas_Resume.pdf" type="button" class=" btn btn-header text-center" title="Download Resume"
             target="_blank">Resume&nbsp;&nbsp; <i class="fas fa-file-download"></i></a>
-        </div>
+        </div> -->
       </div>
   </header>
 
@@ -116,7 +119,7 @@
             <span class="crimson"> Course:</span> Bachelor of Technology (2016 - 2020) <br>
             <span class="crimson">Stream:</span> Computer Science and Engineering <br>
             <span class="crimson">Institution:</span> Anurag Group of Institutions<br>
-            <span class="crimson">CGPA:</span> 9.76/10 <br>
+            <span class="crimson">CGPA:</span> 9.77/10 <br>
           </div>
 
           <div class="btech timeline text-dark" data-aos="fade-up" style="box-shadow: 0 4px 8px 0 rgba(0,0,0,0.1);
